{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MovementMap",
            "id": "e823e228-49ba-4120-89d8-900997bbe20e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "91e49a81-8a8e-43c0-ab64-d2eece300d81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "bad254c9-0414-4da7-8501-54e7092ef558",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e6255e72-5460-414a-832d-9253a0d2f3fc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "85786ff8-f187-49b1-a721-7118965dfdea",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "da9eb67d-d873-436a-bde8-94b7b7062353",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da090419-dfa1-44bb-92f9-cc6ab56466f2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5c09e83a-e78a-49a1-a4a5-ace54bef3cca",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MouseMap",
            "id": "db6d7b35-80f4-4dfd-9647-49ad62fb49aa",
            "actions": [
                {
                    "name": "MouseMoved",
                    "type": "Value",
                    "id": "af5174a7-025a-40d2-91a8-95664d63d87d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStick",
                    "type": "PassThrough",
                    "id": "e5e4dc64-8899-4449-971b-9d0013d21418",
                    "expectedControlType": "Stick",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6fc72f8-f5da-4ddd-a557-616f8b81b1b3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3b10750-cc9c-4213-9268-d42a304dd1e0",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AbilityMap",
            "id": "c1885414-c5d5-4c76-9995-01ff4113e856",
            "actions": [
                {
                    "name": "Ability",
                    "type": "Button",
                    "id": "b49f4dc6-7356-447c-beb1-302220c77d75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c59de263-873b-4ae1-a53a-b9cb218f6fc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "99f769b6-aefc-40e9-9eb9-9cc1b4bb661f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbbaa3bb-5d9a-4674-93f9-7b7b57e37164",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WeaponMap",
            "id": "336a7f6b-cc2f-4915-af8a-9e27a482615c",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "926f75f9-4896-4669-bd43-c778d491312c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "b09c9272-22ef-42a9-a9fe-9a7cedff0546",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Change",
                    "type": "Value",
                    "id": "9da69868-ffa0-44aa-a1db-59b0c6226e49",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4d9f50a-2402-4f7d-b550-aa2113ed0531",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9636e736-58e1-4ae3-93e3-534f24b373e9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a12b694-1d3e-4459-9fc0-a9f13a52d795",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Change",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}